# nlds-client

./: .buildinfo  .gitignore  LICENSE.txt  README.md  catalog_organisation.html  command_ref.html  configuration.html  genindex.html  hints_tips.html  index.html  installation.html  license.html  nlds_client.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  status_codes.html  step_by_step.html  tutorial.html
.github/workflows/: sphinx.yml  testing.yml
_sources/: catalog_organisation.rst.txt  configuration.rst.txt  hints_tips.rst.txt  installation.rst.txt  step_by_step.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
clientlib/: authentication.py  config.py  exceptions.py  transactions.py
docs/: index.html
docs/user_guide/: requirements.txt
docs/user_guide/source/: catalog_organisation.rst  command_ref.rst  conf.py  configuration.rst  hints_tips.rst  index.rst  installation.rst  license.rst  simple_catalog.puml  status_codes.csv  status_codes.rst  step_by_step.rst  tutorial.rst  userview.puml
nlds_client/: __init__.py  nlds_client.py
nlds_client/clientlib/: authentication.py  config.py  exceptions.py  nlds_client_setup.py  transactions.py
nlds_client/templates/: nlds-config.j2
templates/: nlds-config.j2
test/: file_list_test.txt
tests/: test_authentication.py  test_oauth.py
