[build-system]
  requires = ["setuptools >= 77.0.3"]
  build-backend = "setuptools.build_meta"

[project]
  name = "nlds-client"
  version = "1.0.17rc1"
  authors = [
    { name="Neil Massey", email="neil.massey@stfc.ac.uk" },
  ]
  description = "Client library and command line tool for the Near Line Data Store (NLDS)."
  readme = "README.md"
  requires-python = ">=3.10"
  classifiers = [
      "Programming Language :: Python :: 3",
      "Operating System :: OS Independent",
  ]
  license = "BSD-2-Clause"
  license-files = ["LICEN[CS]E*"]
  dependencies = [
    "requests==2.32.5",
    "requests_oauthlib==2.0.0",
    "click==8.3.1",
    "cryptography==46.0.3",
    "certifi==2025.11.12",
  ]


[project.urls]
  Homepage = "https://github.com/cedadev/nlds"
  Issues = "https://github.com/cedadev/nlds/issues"

[project.scripts]
  nlds = "nlds_client.nlds_client:main"